fixed up all noinst_PROGRAMS uses to contain $(ALLTESTS), so tests get
Sun Oct 22 00:30:08 2006 Tim Janik <timj@gtk.org>

        * **/Makefile.am: fixed up all noinst_PROGRAMS uses to contain
        $(ALLTESTS), so tests get automatically build by adding them
        to one of the three *TESTS variables.

        * Makefile.decl: define ALLTESTS to contain TESTS, SLOWTESTS and
        PERFTESTS.

svn path=/trunk/; revision=4015

--- a/Makefile.am
+++ b/Makefile.am
@@ -41,7 +41,7 @@ check: check-recursive
 	@echo $(ALL_CHECKED_MSG) | sed 's/./=/g'
 
 # fixup automake-1.9.6 distuninstallcheck:-rule reporting files created by update-mime-database(1)
-filter_stale_uninstalled      = | egrep -v '^.*/share/mime/(subclasses|globs|magic|XMLnamespaces|aliases)|./report.out$$'
+filter_stale_uninstalled      = | egrep -v '^.*/share/mime/(subclasses|globs|magic|XMLnamespaces|aliases)|.*/report.out$$'
 distuninstallcheck_listfiles  = find . -type f -print 		# standard automake-1.9 setting
 distuninstallcheck_listfiles += $(filter_stale_uninstalled)	# amend by required filtering
 # fixup automake-1.9.6 distcheck:-rule, which attempts to rebuild a dist tarball from within the test-build
