--- a/sfi/tests/Makefile.am
+++ b/sfi/tests/Makefile.am
@@ -7,7 +7,7 @@ include $(top_srcdir)/Makefile.decl
 INCLUDES       += -I$(top_srcdir) -I$(top_builddir) -I. $(SFI_CFLAGS)
 DEFS	       += -DG_LOG_DOMAIN='"$(basename $(@F))"' -DPARANOID # -DG_DISABLE_CONST_RETURNS
 
-noinst_PROGRAMS   = $(TESTS)
+noinst_PROGRAMS   = $(ALLTESTS)
 progs_nosfi_ldadd = $(top_builddir)/birnet/libbirnet.o $(SFI_LIBS) -lm
 progs_ldadd 	  = $(top_builddir)/birnet/libbirnet.o $(top_builddir)/sfi/libsfi.o $(SFI_LIBS) -lm
 SFIDL 		  = $(top_builddir)/sfi/sfidl
