Pass --bse-disable-randomization to BSE2WAV to make tests deterministic
Sun Oct 22 01:30:05 2006 Stefan Westerfeld <stefan@space.twc.de>

	* tests/audio/Makefile.am: Pass --bse-disable-randomization to BSE2WAV
	to make tests deterministic (although still some plugins need to make
	use of that setting).

	* tests/audio/Makefile.am:
	* tests/audio/organsong.ref:
	* tests/audio/organsong.bse: Added test for the DavOrgan module.

svn path=/trunk/; revision=4017

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -12,6 +12,7 @@ BSE2WAV = $(strip							\
 	  --bse-mixing-freq=48000 -p null -m null			\
 	  --bse-rcfile "/dev/null" --bse-no-load			\
 	  --bse-override-plugin-globs $(builddirplugins)		\
+	  --bse-disable-randomization					\
 	  -s $(srcdir)/bse2wav.scm					\
 )
 EXTRA_DIST += bse2wav.scm
@@ -76,6 +77,15 @@ velocity-test:
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
 	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 1 --avg-spectrum --spectrum --avg-energy >> $(@F).tmp
 	$(BSEFCOMPARE) $(srcdir)/velocity.ref $(@F).tmp --threshold 99.99
+	rm -f $(@F).tmp $(@F).wav
+
+# DavOrgan module is a mono module, so we test only channel 0 (left)
+FEATURE_TESTS += organsong-test
+EXTRA_DIST += organsong.bse organsong.ref
+organsong-test:
+	$(BSE2WAV) $(srcdir)/organsong.bse $(@F).wav
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
+	$(BSEFCOMPARE) $(srcdir)/organsong.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
 
 # the BEAST demo song
