provide an block utils implementation name. usually "FPU" or "SSE".
Tue Oct 24 23:52:58 2006 Tim Janik <timj@gtk.org>

        * bseblockutils.hh, bseblockutils.cc: provide an block utils
        implementation name. usually "FPU" or "SSE".

        * bsemain.c: add block utils implementaiton name as suffix to
        the treport_*() CPU name.

        * tests/Makefile.am:
        * tests/blocktests.cc: conditionalized benchmarks, use treport_*().

        * tests/blocktests.cc, tests/resamplehandle.cc: CPU name fixups.

svn path=/trunk/; revision=4036

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -34,6 +34,7 @@ loophandle_SOURCES = loophandle.c
 loophandle_LDADD   = $(progs_ldadd)
 
 TESTS             += blocktests
+PERFTESTS         += blocktests
 blocktests_SOURCES = blocktests.cc
 blocktests_LDADD   = $(progs_ldadd)
 
