new test for the new IIR filter design API. currently covers Butterworth
Mon Oct 30 01:25:56 2006 Tim Janik <timj@gtk.org>

        * tests/filtertest.cc: new test for the new IIR filter design API.
        currently covers Butterworth low pass, high pass, band stop and
        band pass filter tests. tests are based on coefficient comparisons,
        filter transfer function analysis, and zero + pole function
        analysis. for debugging purposes, provided the possibility to
        prematurely abort filter tests and provide a gnuplot dump.

svn path=/trunk/; revision=4046

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -15,6 +15,10 @@ EXTRA_DIST += arrows.gp filter-defs.gp
 noinst_PROGRAMS = $(ALLTESTS)
 progs_ldadd     = $(top_builddir)/bse/libbse.la
 
+TESTS             += filtertest
+filtertest_SOURCES = filtertest.cc
+filtertest_LDADD   = $(progs_ldadd)
+
 TESTS          += testfft
 testfft_SOURCES = testfft.c cxxdummy.cc
 testfft_LDADD   = $(progs_ldadd)
