removed transfer funciton nominator and denominator from public API,
Fri Nov 3 02:19:09 2006 Tim Janik <timj@gtk.org>

        * bsefilter.h, bsefilter.cc: removed transfer funciton nominator and
        denominator from public API, because they are useless for higher
        order filters. added center-frequency to public API, which is the
        middle frequency for band filters (used to evaluate gain ot stopband).

        * bsefilter-ellf.c: provide BseIIRFilterDesign.center_frequency.
        made some slight precision improvements for cgam evaluations.

        * tests/filtertest.cc: special cased lengthy routines as slowtest.
        removed any code (check, eval) related to filter transfer functions.
        did some test split ups. added random filter tests for butterworth,
        chebyshev1, elliptic. extended generic filter test to test passband
        min/max from both sides. added some stopband tests.

        * tests/filtercatalog.cc: random filter catalog generated with bse-ellf.

svn path=/trunk/; revision=4067

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -19,6 +19,7 @@ TESTS             += filtertest
 SLOWTESTS         += filtertest
 filtertest_SOURCES = filtertest.cc
 filtertest_LDADD   = $(progs_ldadd)
+EXTRA_DIST        += filtercatalog.cc
 
 TESTS          += testfft
 testfft_SOURCES = testfft.c cxxdummy.cc
