added gobject to bse's link list.
Wed Nov 15 00:25:16 2006 Tim Janik <timj@gtk.org>

        * data/bse.pc.in: added gobject to bse's link list.

svn path=/trunk/; revision=4088

--- a/data/bse.pc.in
+++ b/data/bse.pc.in
@@ -15,7 +15,7 @@ instrumentdir=@bseinstrumentdir@
 
 Name: BSE
 Description: Bedevilled Sound Engine (Synthesis Core)
-Requires: @BSE_PC_REQUIRE@ gmodule-2.0
+Requires: @BSE_PC_REQUIRE@ gobject-2.0 gmodule-2.0
 Version: @VERSION@
 Libs: -L${libdir} -lbse @BSE_PC_LIBS@
 Cflags: -I${includedir} @BSE_PC_CFLAGS@
