added bit-quantization module.
Wed Nov 15 00:27:55 2006 Tim Janik <timj@gtk.org>

        * bsequantizer.idl, bsequantizer.cc: added bit-quantization module.

svn path=/trunk/; revision=4089

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -18,6 +18,7 @@ plugin_idl_files = $(strip		\
 	bsebalance.idl			\
 	bsecontribsampleandhold.idl	\
 	bsenoise.idl			\
+	bsequantizer.idl		\
 	bsesummation.idl		\
 	davbassfilter.idl		\
 	davchorus.idl			\
