added dtoi32, dtoi64, iround, iceil, ifloor definitions from Rapicorn.
Wed Nov 15 01:00:21 2006 Tim Janik <timj@gtk.org>

        * birnetmath.hh, birnetmath.cc: added dtoi32, dtoi64, iround, iceil,
        ifloor definitions from Rapicorn. these are fast float->integer
        conversion routines on i386.

        * tests/math.cc: test dtoi implementation and friends.

svn path=/trunk/; revision=4091

--- a/birnet/Makefile.am
+++ b/birnet/Makefile.am
@@ -18,6 +18,7 @@ birnet_headers = $(strip 		\
 	birnetsignal.hh                 \
 	birnettests.h			\
 	birnetthread.hh			\
+	birnetmath.hh			\
 	birnetutf8.hh			\
 	birnetutils.hh			\
 )
@@ -27,6 +28,7 @@ birnet_sources = $(strip 		\
 	birnetmsg.cc			\
 	birnetsignal.cc                 \
 	birnetthread.cc			\
+	birnetmath.cc			\
 	birnetutf8.cc			\
 	birnetutils.cc			\
 )
