ported bsemain.c to C++, use C++ Msg API.
Mon Nov 20 23:39:51 2006 Tim Janik <timj@gtk.org>

        * bsemain.cc: ported bsemain.c to C++, use C++ Msg API.

        * bsemain.h: API adaptions due to bsemain.cc porting.

        * bsecore.idl:
        * bsejanitor.proc:
        * bseserver.c: ported to new sfi_msg_* API.

        * bsesequencer.cc: use bse_message_setup_thread_handler().

        * bseenginemaster.c: use bse_message_setup_thread_handler() and
        BIRNET_STATIC_ASSERT().

svn path=/trunk/; revision=4098

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -72,7 +72,7 @@ bse_c_sources = $(strip \
 	bseconstant.c		bseconstvalues.c	bsecontainer.c			bsecontextmerger.c \
 	bsedatapocket.c		bseeditablesample.c	bseenums.c			bsegconfig.c \
 	bseglobals.c		bseglue.c		bseitem.c			bsejanitor.c \
-	bsemain.c		bsemath.c		bsemathsignal.c			bseladspa.c \
+	bsemain.cc		bsemath.c		bsemathsignal.c			bseladspa.c \
 	bsemidicontroller.c	bsemididevice.c 	bsedevice.c 			\
 	bsemididevice-null.c	bsemididevice-oss.c	bsemidievent.c			bsemidinotifier.c \
 	bsemidireceiver.cc	bsemidisynth.c		bseobject.c			bsepart.c \
