updated all po files to new source file set.
Tue Nov 21 02:03:44 2006 Tim Janik <timj@gtk.org>

       * updated all po files to new source file set.

Tue Nov 21 01:57:31 2006  Tim Janik  <timj@gtk.org>

       * merged po file updates from beast CVS.

Tue Nov 21 01:26:51 2006  Tim Janik  <timj@gtk.org>

       * updated all po files to new source file set.

       * POTFILES.in: added missing files.

svn path=/trunk/; revision=4101

--- a/po/POTFILES.in
+++ b/po/POTFILES.in
@@ -126,7 +126,7 @@ plugins/davcanyondelay.c
 plugins/davchorus.idl
 # plugins/davguitar.c
 plugins/davorgan.c
-plugins/davorgan.cc
+#plugins/davorgan.cc
 plugins/davsyndrum.c
 plugins/davxtalstrings.c
 plugins/freeverb/bsefreeverb.c
