added a simple adsr test that checks ADSR volume in comparison to a
Sat Nov 25 01:37:18 2006 Tim Janik <timj@gtk.org>

        * tests/audio/Makefile.am:
        * tests/audio/adsrtest.bse: added a simple adsr test that checks ADSR
        volume in comparison to a reference signal. used avg-spectrum, spectrum
        and avg-energy to check the colume level, which seems to be catching
        all relevant changes to ADSR property changes.

svn path=/trunk/; revision=4111

--- a/tests/audio/Makefile.am
+++ b/tests/audio/Makefile.am
@@ -88,6 +88,15 @@ organsong-test:
 	$(BSEFCOMPARE) $(srcdir)/organsong.ref $(@F).tmp --threshold 99.99
 	rm -f $(@F).tmp $(@F).wav
 
+# ADSR Test checks the mono channel envelope rendering
+FEATURE_TESTS += adsrtest
+EXTRA_DIST += adsrtest.bse adsrtest.ref
+adsrtest:
+	$(BSE2WAV) $(srcdir)/adsrtest.bse $(@F).wav
+	$(BSEFEXTRACT) $(@F).wav --cut-zeros --channel 0 --avg-spectrum --spectrum --avg-energy  > $(@F).tmp
+	$(BSEFCOMPARE) $(srcdir)/adsrtest.ref $(@F).tmp --threshold 99.99
+	rm -f $(@F).tmp $(@F).wav
+
 # the BEAST demo song
 FEATURE_TESTS += partymonster-test
 EXTRA_DIST += partymonster.ref
