Added a test for the highpass performance.
Sat Dec 2 23:55:44 2006 Stefan Westerfeld <stefan@space.twc.de>

	* tests/Makefile.am:
	* tests/firhandle.cc: Added a test for the highpass performance.

	* bsedatahandle-fir.cc: Optimized performance of the highpass handle.
	It is plain FPU code (not SSE), though.

svn path=/trunk/; revision=4126

--- a/bse/tests/Makefile.am
+++ b/bse/tests/Makefile.am
@@ -51,5 +51,6 @@ resamplehandle_SOURCES = resamplehandle.cc
 resamplehandle_LDADD   = $(progs_ldadd)
 
 TESTS                 += firhandle
+PERFTESTS             += firhandle
 firhandle_SOURCES      = firhandle.cc
 firhandle_LDADD        = $(progs_ldadd)
